--- a/form.ui
+++ b/form.ui
@@ -6,64 +6,76 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>329</width>
+    <height>161</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="nameLabel">
+  <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>10</x>
      <y>10</y>
-     <width>321</width>
-     <height>31</height>
+     <width>301</width>
+     <height>141</height>
     </rect>
    </property>
-   <property name="text">
-    <string>当前设备：</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnCommit">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>200</y>
-     <width>131</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="memoryLabel">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>70</y>
-     <width>321</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>总内存</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="ratesLabel">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>40</y>
-     <width>321</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>使用率</string>
-   </property>
+   <widget class="QLabel" name="nameLabel">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>321</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>当前设备：</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="memoryLabel">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>80</y>
+      <width>321</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>总内存</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ratesLabel">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>50</y>
+      <width>321</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>使用率</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
